tests/ui/higher-ranked/trait-bounds/normalize-under-binder/issue-85455.stderr
error[E0277]: the trait bound `for<'a> T: SomeTrait<'a>` is not satisfied
  --> $DIR/issue-85455.rs:8:14
   |
LL |     callee::<fn(&()) -> <T as SomeTrait<'_>>::Associated>();
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `for<'a> SomeTrait<'a>` is not implemented for `T`
   |
help: consider restricting type parameter `T`
   |
LL | fn give_me_ice<T: for<'a> SomeTrait<'a>>() {
   |                 +++++++++++++++++++++++

error[E0277]: the trait bound `for<'a> T: SomeTrait<'a>` is not satisfied
  --> $DIR/issue-85455.rs:8:5
   |
LL |     callee::<fn(&()) -> <T as SomeTrait<'_>>::Associated>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `for<'a> SomeTrait<'a>` is not implemented for `T`
   |
help: consider restricting type parameter `T`
   |
LL | fn give_me_ice<T: for<'a> SomeTrait<'a>>() {
   |                 +++++++++++++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
